# market-search

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  ELI_IMPROVEMENT_PLAN.md  MONDAYNIGHTTOOLEXPANSION.md  README.md  SELFHOST.md  ai-bubble-verdict-forward.html  ai-bubble-verdict.html  ai-infra-moat-analysis.html  ai-infra-moat-report-card.html  claude.md  sp500-fragility-dashboard.html
crates/eli-adapters/: Cargo.toml
crates/eli-adapters/src/: anthropic.rs  lib.rs  mock.rs  ollama.rs  openai_compatible.rs
crates/eli-adapters/src/anthropic/: messages.rs  model.rs  service.rs  sse.rs
crates/eli-cli/: Cargo.toml
crates/eli-cli/src/: args.rs  chat_ui.rs  context.rs  dispatch.rs  lib.rs  main.rs
crates/eli-cli/src/chat/: ui.rs
crates/eli-cli/src/cmd/: agent.rs  mcp.rs  mcp_share.rs  mcp_tools.json  picks.rs  serve.rs  web.rs
crates/eli-cli/src/cmd/finance/: curve.rs  fed.rs  macro_schedule.rs  misc.rs  movers.rs  movers_extended.rs  odds.rs  options.rs  paper.rs  timeseries.rs
crates/eli-cli/src/rust_tools/: syn_map.rs
crates/eli-cli/src/rust_tools/syn_map/: agent_loop.rs  command_summaries.rs  diagnostics.rs  synthesis_render.rs
crates/eli-core/: Cargo.toml
crates/eli-core/src/: adapter.rs  agent.rs  error.rs  extraction.rs  lib.rs  orchestrator.rs  types.rs
crates/eli-core/src/agent/: mod.rs  runtime.rs  summary.rs
crates/eli-core/src/config/: defaults.rs  mod.rs  model.rs
crates/eli-core/src/contract/: json_extract.rs  prompts.rs
crates/eli-core/src/contract/tools/: crawl.md  filings.md  macro.md  odds.md  options.md  prices.md  rate_path.md  search.md  webread.md  websearch.md
crates/eli-core/src/diff/: engine.rs  mod.rs
crates/eli-core/src/diff/engine/: helpers.rs  undo.rs
crates/eli-core/src/executor/: command_runner.rs
crates/eli-core/src/finance/: credentials.rs  ibkr.rs  mod.rs  odds_db.rs  paper.rs  policy.rs  types.rs
crates/eli-core/src/finance/auctions/: fetch.rs
crates/eli-core/src/finance/bis/: fetch.rs
crates/eli-core/src/finance/boe/: fetch.rs  mod.rs
crates/eli-core/src/finance/boj/: fetch.rs
crates/eli-core/src/finance/cot/: fetch.rs
crates/eli-core/src/finance/dashboard/: mod.rs
crates/eli-core/src/finance/dashboard/fetch/: mod.rs  model.rs  search.rs  service.rs
crates/eli-core/src/finance/ecb/: fetch.rs  mod.rs
crates/eli-core/src/finance/eia/: fetch.rs  mod.rs
crates/eli-core/src/finance/filings/: fetch.rs  insider.rs  support.rs
crates/eli-core/src/finance/filings/support/: client.rs  lookup.rs  mod.rs  text.rs
crates/eli-core/src/finance/fiscal/: fetch.rs
crates/eli-core/src/finance/forex/fetch/: mod.rs
crates/eli-core/src/finance/fundamentals/: fetch.rs  mod.rs
crates/eli-core/src/finance/macro_data/: mod.rs
crates/eli-core/src/finance/macro_data/fetch/: dashboard.rs  fred_counts.rs  mod.rs
crates/eli-core/src/finance/news/: fetch.rs  mod.rs
crates/eli-core/src/finance/nyfed/: fetch.rs  mod.rs
crates/eli-core/src/finance/options/: fetch.rs  mod.rs
crates/eli-core/src/finance/options/fetch/: query.rs  service.rs
crates/eli-core/src/finance/policy/: defaults.toml
crates/eli-core/src/finance/providers/: odds.rs  yahoo.rs
crates/eli-core/src/finance/providers/kalshi_sync/: events.rs
crates/eli-core/src/finance/providers/odds/: analytics.rs  kalshi.rs  orderbook_ws.rs  polymarket.rs  query.rs  service.rs
crates/eli-core/src/finance/providers/polymarket_sync/: events.rs
crates/eli-core/src/finance/rate_path/: mod.rs
crates/eli-core/src/finance/rate_path/fetch/: cache.rs  current_rate.rs  live_api.rs  model.rs  parse.rs  (+1 more)
crates/eli-core/src/finance/schedule/: mod.rs
crates/eli-core/src/finance/search/: fetch.rs  mod.rs
crates/eli-core/src/finance/snapshot/: fetch.rs
crates/eli-core/src/finance/stress/: fetch.rs
crates/eli-core/src/finance/sync/: csv_cache_writer.rs  delta.rs  mod.rs  run_sync.rs
crates/eli-core/src/finance/timeseries/: fetch.rs  mod.rs
crates/eli-core/src/finance/volsurface/: fetch.rs
crates/eli-core/src/memory/: mod.rs
crates/eli-core/src/meta/: index.rs
crates/eli-core/src/persistence/: mod.rs
crates/eli-core/src/sentinel/: daemon.rs  io.rs  mod.rs  packets.rs  subscriptions.rs
crates/eli-core/src/web/: mod.rs
crates/eli-core/src/web/providers/: community.rs  crawl.rs  general.rs  mod.rs  read.rs  wiki.rs
crates/eli-finance-types/: Cargo.toml  README.md
crates/eli-finance-types/src/: lib.rs
crates/eli-screen/: Cargo.toml
crates/eli-screen/src/: lib.rs
eli/crates/eli-adapters/: Cargo.toml  README.md
eli/crates/eli-adapters/src/: anthropic.rs  factory.rs  lib.rs  mock.rs  ollama.rs  openai_compatible.rs
eli/crates/eli-adapters/src/openai_compatible/: model.rs  service.rs  sse.rs
eli/crates/eli-cli/: Cargo.toml  README.md
eli/crates/eli-cli/src/: args.rs  chat_ui.rs  context.rs  dispatch.rs  lib.rs  main.rs  serve_ui.html
eli/crates/eli-cli/src/chat/: footer.rs  runtime.rs  slash.rs
eli/crates/eli-cli/src/cmd/: agent.rs  code.rs  mcp.rs  mcp_tools.json  picks.rs  sentinel.rs  web.rs
eli/crates/eli-core/: Cargo.toml  README.md
eli/crates/eli-core/src/: agent.rs  error.rs  extraction.rs  lib.rs  openrouter.rs  orchestrator.rs  trajectory.rs
eli/crates/eli-core/src/config/: io.rs  mod.rs  model.rs
eli/crates/eli-core/src/contract/: mod.rs  prompts.rs  validate.rs
eli/crates/eli-core/src/diff/: engine.rs  mod.rs
eli/crates/eli-core/src/executor/: command_runner.rs  mod.rs
eli/crates/eli-core/src/finance/: credentials.rs  ibkr.rs  mod.rs  odds_db.rs  paper.rs  policy.rs  types.rs
eli/crates/eli-core/src/memory/: mod.rs
eli/crates/eli-core/src/meta/: mod.rs  model.rs  schema.rs  service.rs
eli/crates/eli-core/src/metrics/: mod.rs
eli/crates/eli-core/src/orchestrator/: compaction.rs  helpers.rs  mod.rs  subagents.rs
eli/crates/eli-core/src/persistence/: mod.rs
eli/crates/eli-core/src/sentinel/: evaluator.rs  packets.rs
eli/crates/eli-core/src/web/: mod.rs
eli/crates/eli-screen/: Cargo.toml  README.md
eli/crates/eli-tui/: Cargo.toml
eli/crates/eli-tui/src/: app.rs  lib.rs
(+176 files in other folders)
