[package]
name = "eli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "financial coding agent"
readme = "README.md"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
eli-cli.workspace = true
syn = "2.0.115"

[workspace]
members = [
  "crates/eli-adapters",
  "crates/eli-cli",
  "crates/eli-core",
  "crates/eli-finance-types",
  "crates/eli-screen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/efoltyn/eli"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
crossterm = "0.28"
directories = "5.0"
futures = "0.3"
ratatui = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "native-tls", "cookies", "stream"] }
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
similar = "2.5"
termimad = "0.30"
textwrap = "0.16"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
walkdir = "2.5"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
rand = "0.8"
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
evalexpr = "11.3"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }

eli-adapters = { path = "crates/eli-adapters", version = "0.1.0" }
eli-cli = { path = "crates/eli-cli", version = "0.1.0" }
eli-core = { path = "crates/eli-core", version = "0.1.0" }
eli-finance-types = { path = "crates/eli-finance-types", version = "0.1.0" }
eli-screen = { path = "crates/eli-screen", version = "0.1.0" }

# ── dev build speed ────────────────────────────────────────────────────────────
[profile.dev]
# macOS: skip dsymutil (the 10-minute culprit). Leaves .o files scattered
# instead of bundling into one .dSYM. Fine for dev, gdb/lldb still works.
split-debuginfo = "unpacked"
# max parallel codegen units — faster incremental
codegen-units = 256

# Strip debug info from all external deps. They're compiled once and cached.
# Dramatically cuts linker input size → faster link on every eli-cli change.
[profile.dev.package."*"]
opt-level = 1
debug = false
# On this macOS toolchain, debug=false for proc-macro deps can surface as
# `-C strip=debuginfo`, which is currently crashing rustc with SIGBUS while
# linking crates like `syn`. Keep strip disabled for dev deps.
strip = "none"
