[package]
name = "eli-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider adapters for eli coding agent"
publish = false

[dependencies]
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
eli-core.workspace = true
