[package]
name = "eli-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal provider adapters for the `eli` crate. Use `cargo install eli`."
readme = "README.md"

[dependencies]
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
eli-core.workspace = true
