[package]
name = "eli-cli"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal CLI library for the `market-search` binary. Use `cargo install market-search`."
readme = "README.md"
autobins = false

[dependencies]
clap.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
directories.workspace = true
uuid.workspace = true
eli-core.workspace = true
base64 = "0.22"
crossterm.workspace = true
console.workspace = true
ratatui.workspace = true
termimad.workspace = true
textwrap.workspace = true
unicode-width = "0.1"
rustyline.workspace = true
sha2.workspace = true
syn = { version = "2.0.115", features = ["full", "visit"] }
aho-corasick = "1.1.4"
quote = "1.0.44"
proc-macro2 = "1.0.106"
regex-automata = "0.4.14"
indexmap = { version = "2.13.0", features = ["serde"] }
regex = "1.12.3"
once_cell = "1.21.3"
itertools = "0.14.0"
csv = "1.3"
axum.workspace = true
tower-http.workspace = true
