[package]
name = "eli-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal core library for the `eli` crate. Use `cargo install eli`."
readme = "README.md"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
similar.workspace = true
sha2.workspace = true
walkdir.workspace = true
directories.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio-tungstenite.workspace = true
yahoo_finance_api = "4.1"
time = "0.3"
html-escape = "0.2"
urlencoding = "2.1.3"
scraper = "0.25.0"
readability = "0.3.0"
spider = { version = "2.45.12", default-features = false, features = ["sync", "sitemap", "regex", "smart"] }
rand.workspace = true
base64.workspace = true
rsa.workspace = true
csv = "1.3"
regex = "1.12.3"
eli-finance-types.workspace = true
