[package]
name = "eli-finance-types"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal finance contracts for the market-search binary. Use `cargo install market-search`."
readme = "README.md"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
