[package]
name = "eli-screen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform screen automation for eli"
publish = false

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
