[package]
name = "eli-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for eli coding agent"

[[bin]]
name = "eli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
eli-core.workspace = true
eli-adapters.workspace = true
eli-screen.workspace = true
eli-tui.workspace = true
base64 = "0.22"
crossterm.workspace = true
console.workspace = true
ratatui.workspace = true
termimad.workspace = true
textwrap.workspace = true
unicode-width = "0.1"
rustyline.workspace = true
