[package]
name = "eli-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core logic for eli coding agent"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
similar.workspace = true
sha2.workspace = true
walkdir.workspace = true
directories.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
yahoo_finance_api = "4.1"
time = "0.3"
html-escape = "0.2"
