[package]
name = "eli-screen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal screen automation crate for `eli`. Use `cargo install eli`."
readme = "README.md"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
