[package]
name = "eli-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for eli"

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
eli-core.workspace = true
eli-adapters.workspace = true
anyhow.workspace = true
tracing.workspace = true
